--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,3 @@
-
-
-
 ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
@@ -15,12 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_speed = 115200
-
-; Библиотеки, которые PlatformIO установит автоматически
 lib_deps = 
-    paulstoffregen/OneWire
-    milesburton/DallasTemperature
-    adafruit/RTClib
-    olikraus/U8g2
-    bblanchon/ArduinoJson
+    bblanchon/ArduinoJson @ ^6.21.5
+    paulstoffregen/OneWire @ ^2.3.7
+    milesburton/DallasTemperature @ ^3.11.0
+    adafruit/RTClib @ ^2.1.1
+    olikraus/U8g2 @ ^2.35.8
+monitor_speed = 115200
